--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ altair==5.1.2
 anthropic==0.2.10
 anyio==3.7.0
 appdirs==1.4.4
+argcomplete==1.10.3
 asgiref==3.7.2
 asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
 async-timeout==4.0.2
@@ -12,6 +13,7 @@ attrs==23.2.0
 backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
 backoff==2.2.1
 bcrypt==4.1.2
+beautifulsoup4==4.8.2
 bentoml==1.0.22
 blinker==1.6.3
 build==1.2.1
@@ -19,6 +21,7 @@ cachetools==5.3.1
 cattrs==23.1.2
 certifi==2023.5.7
 cffi==1.16.0
+chardet==3.0.4
 charset-normalizer==3.1.0
 chroma-hnswlib==0.7.3
 chromadb==0.5.0
@@ -32,6 +35,7 @@ cohere==3.10.0
 colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
 coloredlogs==15.0.1
 comm @ file:///C:/ci_311/comm_1678376562840/work
+compressed-rtf==1.0.6
 contextlib2==21.6.0
 customtkinter==5.2.2
 darkdetect==0.8.0
@@ -42,8 +46,11 @@ decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
 deepmerge==1.1.0
 Deprecated==1.2.14
 dill==0.3.6
+docx2txt==0.8
+ebcdic==1.1.1
 et-xmlfile==1.1.0
 executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
+extract-msg==0.28.7
 fastapi==0.110.2
 filelock==3.12.2
 filetype==1.2.0
@@ -65,6 +72,7 @@ httpx==0.27.0
 huggingface-hub==0.15.1
 humanfriendly==10.0
 idna==3.4
+IMAPClient==2.1.0
 importlib-metadata==6.0.1
 importlib_resources==6.4.0
 inflection==0.5.1
@@ -79,6 +87,7 @@ jupyter_core @ file:///C:/b/abs_9d0ttho3bs/croot/jupyter_core_1679906581955/work
 kubernetes==29.0.0
 langchain==0.0.215
 langchainplus-sdk==0.0.17
+lxml==5.2.1
 manifest-ml==0.0.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
@@ -98,6 +107,7 @@ nlpcloud==1.0.42
 numexpr==2.8.4
 numpy==1.25.0
 oauthlib==3.2.2
+olefile==0.47
 ollama==0.1.9
 onnxruntime==1.17.3
 openai==0.27.8
@@ -125,6 +135,7 @@ packaging==23.1
 pandas==2.0.2
 parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
 pathspec==0.11.1
+pdfminer.six==20191110
 pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
 Pillow==9.5.0
 pip-requirements-parser==32.0.1
@@ -140,6 +151,7 @@ pyarrow==12.0.1
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.21
+pycryptodome==3.20.0
 pydantic==1.10.9
 pydeck==0.8.1b0
 Pygments==2.15.1
@@ -154,6 +166,7 @@ python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
 python-dotenv==1.0.0
 python-json-logger==2.0.7
 python-multipart==0.0.6
+python-pptx==0.6.23
 pytz==2023.3
 pywin32==305.1
 PyYAML==6.0
@@ -172,10 +185,12 @@ selenium==4.18.1
 sentencepiece==0.1.99
 shellingham==1.5.4
 simple-di==0.1.5
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+six==1.12.0
 smmap==5.0.1
 sniffio==1.3.0
 sortedcontainers==2.4.0
+soupsieve==2.5
+SpeechRecognition==3.8.1
 SQLAlchemy==2.0.17
 sqlitedict==2.1.0
 stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
@@ -184,6 +199,7 @@ streamlit==1.27.2
 sympy==1.12
 tabulate==0.9.0
 tenacity==8.2.3
+textract==1.6.5
 tokenizers==0.13.3
 toml==0.10.2
 toolz==0.12.0
@@ -210,6 +226,8 @@ websocket-client==1.8.0
 websockets==12.0
 wrapt==1.15.0
 wsproto==1.2.0
+xlrd==1.2.0
+XlsxWriter==3.2.0
 xxhash==3.2.0
 yarl==1.9.2
 zipp==3.15.0
